[FIX] Progressbar overflow

--- a/styles/0/teams/Teams.module.scss
+++ b/styles/0/teams/Teams.module.scss
@@ -457,6 +457,7 @@
 
     border: rgba(190, 190, 190, 0.194) 1px solid;
     border-radius: 1rem;
+    overflow: hidden;
 
     &__progress {
         width: 0%;
